--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'intervaltree'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m defaultdict, Counter\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mintervaltree\u001b[39;00m \u001b[39mimport\u001b[39;00m IntervalTree\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mfunctools\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'intervaltree'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict, Counter\n",
     "from intervaltree import IntervalTree\n",
@@ -195,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +192,7 @@
        "(25651, 19499881)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,61 +222,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 50 98 2\n",
-      "1 52 50 48\n",
-      "0 37 52 2\n",
-      "1 39 0 15\n",
-      "0 0 11 42\n",
-      "1 42 0 7\n",
-      "2 57 7 4\n",
-      "0 18 25 70\n",
-      "0 81 45 19\n",
-      "1 68 64 13\n",
-      "0 1 0 69\n",
-      "0 56 93 4\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 19\u001b[0m\n\u001b[1;32m     15\u001b[0m         maps[name] \u001b[39m=\u001b[39m intervals\n\u001b[1;32m     17\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(seeds), maps\n\u001b[0;32m---> 19\u001b[0m data5 \u001b[39m=\u001b[39m day5_maps(data(\u001b[39m5\u001b[39;49m))\n\u001b[1;32m     20\u001b[0m data5\n",
-      "Cell \u001b[0;32mIn[9], line 14\u001b[0m, in \u001b[0;36mday5_maps\u001b[0;34m(lines)\u001b[0m\n\u001b[1;32m     12\u001b[0m maps \u001b[39m=\u001b[39m {}\n\u001b[1;32m     13\u001b[0m \u001b[39mwhile\u001b[39;00m lines:\n\u001b[0;32m---> 14\u001b[0m     name, intervals, lines \u001b[39m=\u001b[39m create_map(lines[\u001b[39m2\u001b[39m:])\n\u001b[1;32m     15\u001b[0m     maps[name] \u001b[39m=\u001b[39m intervals\n\u001b[1;32m     17\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(seeds), maps\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+      "[IntervalTree([Interval(50, 98, 52), Interval(98, 100, 50)]), IntervalTree([Interval(0, 15, 39), Interval(15, 52, 0), Interval(52, 54, 37)]), IntervalTree([Interval(0, 7, 42), Interval(7, 11, 57), Interval(11, 53, 0), Interval(53, 61, 49)]), IntervalTree([Interval(18, 25, 88), Interval(25, 95, 18)]), IntervalTree([Interval(45, 64, 81), Interval(64, 77, 68), Interval(77, 100, 45)]), IntervalTree([Interval(0, 69, 1), Interval(69, 70, 0)]), IntervalTree([Interval(56, 93, 60), Interval(93, 97, 56)])]\n"
      ]
     }
    ],
    "source": [
-    "def day5_maps(lines):\n",
-    "    seeds = map(int, lines[0].split(': ')[-1].split())\n",
+    "def create_map(lines):\n",
+    "    name = lines[0].split(' ')[0]\n",
+    "    ranges = IntervalTree()\n",
+    "    for i, line in enumerate(lines[1:]):\n",
+    "        if not line:\n",
+    "            break\n",
+    "        dest, source, size = map(int, line.split())\n",
+    "        ranges[source:source+size] = dest\n",
+    "    return name, ranges, lines[i+2:]\n",
     "\n",
-    "    def create_map(lines):\n",
-    "        name = lines[0].split(' ')[0]\n",
-    "        result = {}\n",
-    "        for i, line in enumerate(lines[1:]):\n",
-    "            if not line:\n",
-    "                return name, result, lines[i+1:]\n",
-    "            print(i, line)\n",
+    "def day5_maps(data):\n",
+    "    seeds, data = map(int, data[0].split(': ')[-1].split()), data[2:]\n",
     " \n",
-    "    maps = {}\n",
-    "    while lines:\n",
-    "        name, intervals, lines = create_map(lines[2:])\n",
-    "        maps[name] = intervals\n",
+    "    maps = []\n",
+    "    while len(data):\n",
+    "        name, intervals, data = create_map(data)\n",
+    "        maps.append(intervals)\n",
+    "    print(maps)\n",
     "\n",
     "    return list(seeds), maps\n",
     "\n",
-    "data5 = day5_maps(data(5))\n",
-    "data5\n"
+    "seeds, data5 = day5_maps(data(5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IntervalTree([Interval(1, 5, 10)])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = IntervalTree()\n",
+    "not a.at(1)\n",
+    "a[1:5] = 10\n",
+    "print(a)\n",
+    "a.at(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "78-50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Interval(50, 98, 52)}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data5[0].at(79)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79 50 52\n",
+      "81 25 18\n",
+      "74 64 68\n",
+      "78 56 60\n",
+      "82\n",
+      "14 0 39\n",
+      "53 53 49\n",
+      "49 25 18\n",
+      "42 0 1\n",
+      "43\n",
+      "55 50 52\n",
+      "57 53 49\n",
+      "53 25 18\n",
+      "46 45 81\n",
+      "82 56 60\n",
+      "86\n",
+      "13 0 39\n",
+      "52 11 0\n",
+      "41 25 18\n",
+      "34 0 1\n",
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "for seed in seeds:\n",
+    "    # print(seed)\n",
+    "    for interval in data5:\n",
+    "        if not (hit := interval.at(seed)):\n",
+    "            # print(seed, hit)\n",
+    "            continue\n",
+    "        # print(seed, hit)\n",
+    "        start, end, dest = next(iter(hit))\n",
+    "        # print(seed, start, dest)\n",
+    "        seed = (seed-start)+dest\n",
+    "    print(seed)"
    ]
   }
  ],
