--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,10 +296,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data6 = data(6, lambda x: list(map(int, x.split(':')[-1].split())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 9\n",
+      "15 40\n",
+      "30 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "288"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6(times, distances):\n",
+    "    result = []\n",
+    "    for t, d in zip(times, distances):\n",
+    "        print(t, d)\n",
+    "        # (t-x)*x = d+1\n",
+    "        # -x**2 +xt -d-1 = 0\n",
+    "        a, b, c = -1, t, -d-1\n",
+    "        det = math.sqrt(b**2 - 4*a*c)\n",
+    "        if det < 0:\n",
+    "            continue\n",
+    "        zeros = (-b+det)/(2*a), (-b-det)/(2*a)\n",
+    "        floor, ceil = math.ceil(min(zeros)), math.floor(max(zeros))\n",
+    "        result.append(ceil-floor+1)\n",
+    "    return functools.reduce(lambda x, y: x*y, result, 1)\n",
+    "\n",
+    "day6(*data6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = 7\n",
+    "a = -1\n",
+    "c = -9\n",
+    "b**2 - 4*a*c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.302775637731995"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(-b - math.sqrt(b**2 - 4*a*c))/(2*a)"
+   ]
   }
  ],
  "metadata": {
