--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -329,6 +329,90 @@
     "\n",
     "day6(*data6), day6(*[[int(''.join(map(str, x)))] for x in data6])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data7 = data(7, lambda x: x.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32T3K 7 Counter({3: 2, 2: 1, 10: 1, 13: 1})\n",
+      "T55J5 11 Counter({5: 3, 10: 1, 11: 1})\n",
+      "KK677 9 Counter({13: 2, 7: 2, 6: 1})\n",
+      "KTJJT 9 Counter({10: 2, 11: 2, 13: 1})\n",
+      "QQQJA 11 Counter({12: 3, 11: 1, 14: 1})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6440"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def card_ord(card):\n",
+    "    match card:\n",
+    "        case 'T': return 10\n",
+    "        case 'J': return 11\n",
+    "        case 'Q': return 12\n",
+    "        case 'K': return 13\n",
+    "        case 'A': return 14\n",
+    "    return int(card)\n",
+    "\n",
+    "def score_hand(hand):\n",
+    "    cards = [card_ord(card) for card in hand]\n",
+    "    counts = Counter(cards)\n",
+    "    score = sum([counts[x]**2 for x in counts])\n",
+    "    print(hand, score, counts)\n",
+    "    return [score]+cards\n",
+    "\n",
+    "def day7(data):\n",
+    "    ordered = sorted(data, key=lambda x: score_hand(x[0]))\n",
+    "    return sum((i+1)*int(score) for i, (_, score) in enumerate(ordered))\n",
+    "\n",
+    "day7(data7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['32T3K', '765'],\n",
+       " ['T55J5', '684'],\n",
+       " ['KK677', '28'],\n",
+       " ['KTJJT', '220'],\n",
+       " ['QQQJA', '483']]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data7"
+   ]
   }
  ],
  "metadata": {
