--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -346,10 +346,10 @@
     {
      "data": {
       "text/plain": [
-       "250057090"
+       "(248812215, 250057090)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,52 +366,23 @@
     "        case 'A': return 14\n",
     "    return int(card)\n",
     "\n",
-    "def _score_hand(cards):\n",
-    "    counts = Counter(cards)\n",
-    "    return sum([counts[x]**2 for x in counts])\n",
+    "def score_hand(hand, flag=False):\n",
+    "    cards = [card_ord(card, flag) for card in hand]\n",
+    "    if flag:\n",
+    "        filtered = Counter(hand.replace('J', ''))\n",
+    "        hand = hand.replace('J', filtered.most_common(1)[0][0] if filtered else 'A')\n",
     "\n",
-    "def score_hand(hand):\n",
-    "    cards = [card_ord(card) for card in hand]\n",
-    "    score = _score_hand(cards)\n",
-    "    return [score]+cards\n",
-    "\n",
-    "def score_wild_hand(hand):\n",
-    "    cards = [card_ord(card, True) for card in hand]\n",
-    "    counts = Counter(hand.replace('J', ''))\n",
-    "\n",
-    "    wild_hand = hand.replace('J', counts.most_common()[0][0] if counts else 'A')\n",
-    "    score = _score_hand(wild_hand)\n",
+    "    counts = Counter(hand)\n",
+    "    score = sum([counts[x]**2 for x in counts])\n",
     "    return [score]+cards\n",
     "\n",
     "def day7(data, flag=False):\n",
-    "    key = lambda x: (score_wild_hand if flag else score_hand)(x[0])\n",
+    "    key = lambda x: score_hand(x[0], flag)\n",
     "    ordered = sorted(data, key=key)\n",
     "    print(ordered)\n",
     "    return sum((i+1)*int(score) for i, (_, score) in enumerate(ordered))\n",
     "\n",
-    "day7(data7)\n",
-    "day7(data7, True)\n",
-    "#249088398\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Counter().most_common()"
+    "day7(data7), day7(data7, True)"
    ]
   },
   {
@@ -419,10 +390,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "248812215\n",
-    "250188536"
-   ]
+   "source": []
   }
  ],
  "metadata": {
