--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,6 +383,70 @@
     "    return sum((i+1)*int(score) for i, (_, score) in enumerate(ordered))\n",
     "\n",
     "day7(data7), day7(data7, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18673"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse8(data):\n",
+    "    instructions, nodes = data[0], {}\n",
+    "    for line in data[2:]:\n",
+    "        start, l, r = re.findall(r'(.{3}) = \\((.{3}), (.{3})\\)', line)[0] \n",
+    "        nodes[start] = (l, r)\n",
+    "    return instructions, nodes\n",
+    "\n",
+    "data8 = parse8(data(8))\n",
+    "\n",
+    "def day8(instructions, nodes, start, ends):\n",
+    "    count, node = 0, start\n",
+    "    for i in itertools.cycle(instructions):\n",
+    "        node = nodes[node][0 if i == 'L' else 1]\n",
+    "        count +=1\n",
+    "        if ends(node):\n",
+    "            break\n",
+    "    return count\n",
+    "\n",
+    "day8(*data8, 'AAA', lambda x: x == 'ZZZ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17972669116327"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8_2(instructions, nodes):\n",
+    "    results = []\n",
+    "    for start in filter(lambda x: re.match(r'..A', x), nodes):\n",
+    "        results.append(day8(instructions, nodes, start, lambda x: re.match(r'..Z', x)))\n",
+    "    return math.lcm(*results)\n",
+    "\n",
+    "day8_2(*data8)"
    ]
   },
   {
