--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "17972669116327"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,10 +451,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data9 = data(9, lambda line: [int(x) for x in line.split()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2008960228"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def determine_steps(arr, i=-1):\n",
+    "    steps = [arr[i]]\n",
+    "    while len(np.unique(arr)) > 1:\n",
+    "        arr = np.diff(arr)\n",
+    "        steps.append(arr[i])\n",
+    "    return steps\n",
+    "\n",
+    "def day9(data):\n",
+    "    result = 0\n",
+    "    for history in data:\n",
+    "        steps = determine_steps(np.array(history))\n",
+    "        result += sum(steps)\n",
+    "    return result\n",
+    "\n",
+    "day9(data9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 6, 9, 12, 15] [0, 3] -3\n",
+      "[1, 3, 6, 10, 15, 21] [1, 2, 1] -3\n",
+      "[10, 13, 16, 21, 30, 45] [10, 3, 0, 2] 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9_2(data):\n",
+    "    result = 0\n",
+    "    for history in data:\n",
+    "        steps = determine_steps(np.array(history))\n",
+    "        result += sum(steps[::2]) - sum(steps[1::2])\n",
+    "        # print(history, steps, result)\n",
+    "    return result\n",
+    "\n",
+    "day9_2(data9)"
+   ]
   }
  ],
  "metadata": {
