--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -455,26 +455,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data9 = data(9, lambda line: [int(x) for x in line.split()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2008960228"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "data9 = data(9, lambda line: [int(x) for x in line.split()])\n",
+    "\n",
     "def determine_steps(arr, i=-1):\n",
     "    steps = [arr[i]]\n",
     "    while len(np.unique(arr)) > 1:\n",
@@ -482,52 +464,23 @@
     "        steps.append(arr[i])\n",
     "    return steps\n",
     "\n",
-    "def day9(data):\n",
-    "    result = 0\n",
+    "def day9(data, part2=False):\n",
+    "    part1, part2 = 0, 0\n",
     "    for history in data:\n",
-    "        steps = determine_steps(np.array(history))\n",
-    "        result += sum(steps)\n",
-    "    return result\n",
+    "        steps = determine_steps(np.array(history)), determine_steps(np.array(history), 0)\n",
+    "        part1 += sum(steps[0])\n",
+    "        part2 += sum(steps[1][::2]) - sum(steps[1][1::2])\n",
+    "    return part1, part2\n",
     "\n",
     "day9(data9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 3, 6, 9, 12, 15] [0, 3] -3\n",
-      "[1, 3, 6, 10, 15, 21] [1, 2, 1] -3\n",
-      "[10, 13, 16, 21, 30, 45] [10, 3, 0, 2] 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day9_2(data):\n",
-    "    result = 0\n",
-    "    for history in data:\n",
-    "        steps = determine_steps(np.array(history))\n",
-    "        result += sum(steps[::2]) - sum(steps[1::2])\n",
-    "        # print(history, steps, result)\n",
-    "    return result\n",
-    "\n",
-    "day9_2(data9)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
