--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict, Counter\n",
+    "from collections import defaultdict, Counter, deque\n",
     "from intervaltree import Interval, IntervalTree\n",
     "import itertools\n",
     "import functools\n",
@@ -14,6 +14,9 @@
     "import numpy as np\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
+    "\n",
+    "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
+    "    formatter=dict(float=lambda x: \"%.3g\" % x))\n",
     "\n",
     "T = TypeVar('T')\n",
     "\n",
@@ -477,7 +480,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data10 = np.array(data(10, list))\n",
+    "\n",
+    "pipe_map = {\n",
+    "    '|': [(0, -1), (0, 1)],\n",
+    "    '-': [(-1, 0), (1, 0)],\n",
+    "    'L': [(0, -1), (1, 0)],\n",
+    "    'J': [(0, -1), (-1, 0)],\n",
+    "    '7': [(0, 1), (-1, 0)],\n",
+    "    'F': [(0, 1), (1, 0)],\n",
+    "}\n",
+    "\n",
+    "def pipe_neighbors(pipe, x, y):\n",
+    "    if pipe not in pipe_map:\n",
+    "        return\n",
+    "    for i in pipe_map[pipe]:\n",
+    "        yield (x+i[0], y+i[1])\n",
+    "\n",
+    "def get_neighbors(x, y):\n",
+    "    return [(x-1, y), (x+1, y), (x, y+1), (x, y-1)]\n",
+    "\n",
+    "def fix_pipe_start(arr):    \n",
+    "    start_coords = np.where(arr == 'S')\n",
+    "    y, x = start_coords[0][0], start_coords[1][0]\n",
+    "\n",
+    "    neighbors = []\n",
+    "    for i, j in get_neighbors(x, y):\n",
+    "        if (x, y) in pipe_neighbors(data10[j, i], i, j):\n",
+    "            neighbors.append((i-x, j-y))\n",
+    "    for pipe in pipe_map.keys():\n",
+    "        if frozenset(pipe_map[pipe]) == frozenset(neighbors):\n",
+    "            arr[y, x] = pipe\n",
+    "    return x, y\n",
+    "\n",
+    "def dijkstra(nodes, start, get_neighbors, end_condition=lambda _: False):\n",
+    "    q, visited = deque([(start, 0)]), {}\n",
+    "    while q:\n",
+    "        current, distance = q.popleft()\n",
+    "        if end_condition(current):\n",
+    "            return visited, current\n",
+    "        if current in visited:\n",
+    "            continue\n",
+    "        for node in get_neighbors(nodes, current):\n",
+    "            q.append((node, distance+1))\n",
+    "        visited[current] = distance\n",
+    "    return visited, None\n",
+    "\n",
+    "def day10(data):\n",
+    "    arr = data.copy()\n",
+    "    start = fix_pipe_start(arr)\n",
+    "    # print(arr)\n",
+    "    visited, _ = dijkstra(data, start, lambda _, coords: pipe_neighbors(arr[coords[1], coords[0]], *coords))\n",
+    "\n",
+    "    visual = data.copy()\n",
+    "    for x, y in visited:\n",
+    "        visual[y, x] = visited[(x, y)]\n",
+    "    # print(visual)\n",
+    "\n",
+    "# max(visited.values())\n",
+    "    return visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['.' 'F' '-' '-' '-' '-' '7' 'F' '7' 'F' '7' 'F' '7' 'F' '-' '7' '.' '.' '.' '.']\n",
+      " ['.' '|' '0' '-' '-' '7' '|' '|' '0' '|' '0' '|' '0' '|' '0' 'J' '.' '.' '.' '.']\n",
+      " ['.' '|' '|' '.' 'F' 'J' '|' '|' '|' '|' '|' '|' '|' '|' 'L' '7' '.' '.' '.' '.']\n",
+      " ['F' 'J' 'L' '7' 'L' '0' 'L' 'J' 'L' 'J' '|' '|' 'L' 'J' '.' 'L' '-' '7' '.' '.']\n",
+      " ['L' '0' '-' 'J' '.' 'L' '7' '.' '.' '.' 'L' 'J' 'S' '7' 'F' '-' '7' 'L' '7' '.']\n",
+      " ['0' '0' '0' '0' 'F' '-' 'J' '.' '.' 'F' '7' 'F' 'J' '|' 'L' '7' 'L' '7' 'L' '7']\n",
+      " ['0' '0' '0' '0' 'L' '0' '0' 'F' '7' '|' '|' 'L' '7' '|' '.' 'L' '7' 'L' '7' '|']\n",
+      " ['0' '0' '0' '0' '0' '|' 'F' 'J' 'L' 'J' '|' 'F' 'J' '|' 'F' '7' '|' '.' 'L' 'J']\n",
+      " ['0' '0' '0' '0' 'F' 'J' 'L' '-' '7' '.' '|' '|' '.' '|' '|' '|' '|' '.' '.' '.']\n",
+      " ['.' '0' '0' '0' 'L' '0' '-' '-' 'J' '.' 'L' 'J' '.' 'L' 'J' 'L' 'J' '.' '.' '.']] 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = day10(data10)\n",
+    "\n",
+    "Fs = [(x*2, y*2) for x, y in test if data10[y, x] == 'F']\n",
+    "\n",
+    "def fill_neighbors(arr, x, y):\n",
+    "    west, east, south, north = get_neighbors(x, y)\n",
+    "    if west[0] < 0 or north[1] < 0 or east[0] > len(arr[0])-1 or south[1] > len(arr)-1:\n",
+    "        return\n",
+    "\n",
+    "    yield from [(x, y) for x, y in [west, east, south, north] if arr[y, x] == '.']\n",
+    "\n",
+    "    # lr, ns = '|.', '-.'\n",
+    "    # for (x, y), allowed in ((west, lr), (east, lr), (south, ns), (north, ns)):\n",
+    "    #     p = data10[y, x]\n",
+    "    #     if p not in allowed:\n",
+    "    #         yield '!'\n",
+    "    #     if p == '.':\n",
+    "    #         yield (x, y)\n",
+    "\n",
+    "def blowup(arr):\n",
+    "    new = np.full((arr.shape[0]*2, arr.shape[1]*2), '.')\n",
+    "    for y, row in enumerate(arr):\n",
+    "        for x, i in enumerate(row):\n",
+    "            new[y*2, x*2] = i\n",
+    "            new[y*2, x*2+1] = '-' if i in '-SFL' else '.'\n",
+    "            new[y*2+1, x*2] = '|' if i in '|SF7' else '.'\n",
+    "    return new\n",
+    "\n",
+    "expanded = blowup(data10)\n",
+    "# print(expanded)\n",
+    "# print(Fs)\n",
+    "\n",
+    "checked = set()\n",
+    "result = 0\n",
+    "filled = data10.copy()\n",
+    "for (fx, fy) in Fs:\n",
+    "    if (fx, fy) in checked:\n",
+    "        continue\n",
+    "    visited, failed = dijkstra(expanded, (fx+1, fy+1), lambda _, coords: fill_neighbors(expanded, *coords), lambda x: x[0] in (0, len(expanded[0])-1) or x[1] in (0, len(expanded)-1))\n",
+    "    b = expanded.copy()\n",
+    "    for (x, y) in visited:\n",
+    "        b[y, x] = '0'\n",
+    "    # print(b, failed, len(visited), visited)\n",
+    "\n",
+    "    if not failed:\n",
+    "        hmm, q = dijkstra(data10, (fx//2+1, fy//2+1), lambda _, coords: fill_neighbors(data10, *coords))\n",
+    "        for (x, y) in hmm:\n",
+    "            filled[y, x] = '0'\n",
+    "        result += len(hmm)\n",
+    "\n",
+    "    checked = checked.union(set(visited.keys()))\n",
+    "print(filled, result)\n",
+    "\n",
+    "# TODO: \n",
+    "# Fs are not the only places to start checking. a | could be diagnol from an F. Alternatively, it could be covered by something like F->|-\n",
+    "# Example doesn't seem to be terminating properly\n",
+    "# Maybe just use an entirely different approach?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": []
