--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -636,16 +636,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([  0,   0,   0,   0,   0,   0,   0,   0,   1,   1,   3,   3,   4,   4,   4,   5,   6,   6,   6,   6,   6,   6,   7,   7,   7,   8,   8,   8,   9,  10,  10,  10,  11,  11,  11,  11,  11,  11,  12,  12,  13,  13,  13,  14,  14,  14,  14,  14,  14,  15,  16,  16,  16,  16,  17,  18,  18,  18,  18,  18,  18,  19,  19,  19,  19,  19,  20,  21,  22,  22,  23,  23,  23,  24,  24,  25,  25,  25,  25,  25,  26,  26,  26,  26,  26,  27,  27,  28,  28,  28,  29,  29,  29,  29,  30,  30,  30,  30,  30,  30,  30,  32,  32,  33,  33,  33,  34,  34,  34,  34,  35,  35,  35,  35,  35,  36,  37,  37,  38,  38,  38,  38,  39,  39,  39,  39,  40,  40,  40,  40,  40,  42,  42,  42,  43,  43,  44,  44,  45,  45,  45,  46,  46,  46,  47,  47,  47,  48,  48,  48,  49,  49,  51,  51,  52,  52,  52,  53,  53,  53,  54,  54,  55,  55,  55,  55,  55,  55,  56,  56,  56,  56,  58,  58,  58,  58,  58,  60,  60,  60,  60,  61,  61,  61,  61,  62,  62,  63,  63,  63,  63,  63,  63,  64,  64,  64,  65,  65,  65,  66,  66,  67,  67,  67,  68,  68,  69,  69,  70,  70,  70,  70,  70,  70,  70,  71,  71,  72,  72,  73,  73,  73,  73,  74,  74,  74,  75,  76,  76,  76,  76,  77,  77,  77,  77,  77,  78,  79,  79,  79,  80,  80,  80,  81,  81,  81,  82,  82,  82,  82,  83,  83,  83,  84,  84,  84,  84,  87,  88,  88,  88,  88,  89,  89,  90,  90,  90,  90,  91,  91,  91,  92,  92,  92,  92,  94,  95,  95,  96,  96,  96,  96,  97,  97,  97,  97,  98,  98,  99,  99,  99,  99, 100, 100, 100, 101, 101, 101, 101, 102, 103, 103, 103, 103, 104, 104, 104, 105, 105, 106, 106, 106, 106, 106, 107, 107, 107, 108, 108, 108, 109, 109, 109, 110, 110, 110, 110, 111, 111, 111, 111, 111, 111, 111, 111, 112, 112, 113, 113, 113, 113, 113, 114, 114, 115, 116, 116, 116, 116, 116, 117, 117, 117, 117, 118, 118, 118, 118, 118, 118, 118, 119, 119, 119, 120, 120, 121, 121, 122, 122, 123, 123, 124, 124, 124, 124, 125, 125, 126, 126, 127, 127, 127, 128, 128, 128, 128, 129, 130, 130, 130, 130, 130, 130, 130, 132, 132, 132, 132, 132, 132, 133, 133, 133, 133, 134, 134, 134, 134, 135, 135, 135, 135, 135, 136, 136, 136, 137, 138, 138, 138, 138, 138, 139, 139, 139, 139]), array([  7,  22,  46,  59,  67,  92,  98, 133,  33,  83, 106, 120,  11,  75, 138,   1,  16,  24,  49,  70,  91, 125,  38,  44, 102,  83, 110, 133,   6,  13,  58, 114,  18,  40,  51, 105, 120, 126,  65,  75,  34, 132, 139,   4,  15,  27,  54,  60, 109,  80,  39,  48,  72, 100, 135,   1,  32,  56,  65,  83, 114,   6,  21,  42, 103, 121,  12, 117,  53, 137,  47,  75,  81,  36, 109,  11,  29,  87,  99, 128,   5,  21,  58,  94, 135, 106, 123,  39,  54, 139,  33,  82, 102, 116,   3,  12,  28,  50,  63,  97, 111,  45,  70,  58, 107, 138,  19,  39,  80, 127,   4,  10,  34,  94, 100,  88,  46, 104,  26,  75, 121, 136,   8,  62,  70, 129,  13,  43,  54,  85, 107,   1,  80,  98,  22,  38,  67, 134,  10,  92, 115,  17,  42,  71,  58, 107, 120,  50,  75, 127,  94, 113,   5, 101,  36, 108, 117,  19,  80,  91,  29, 136,  15,  47,  58,  97, 103, 125,   7,  23,  85, 130,  35,  43,  52,  61, 111,  10,  29,  71, 134,  48,  91, 108, 129,  57,  85,   0,  21,  33,  99, 114, 121,  45,  53, 105,  28,  88,  94,   7,  80,  58, 110, 131,   3, 119,  15,  33,  20,  38,  46,  65,  91, 105, 135,  56,  84,  27,  75,   1,   9,  98, 139,  32, 113, 129,  52,  67, 105, 121, 134,  36,  59,  73,  84,  90,  11,  23,  45, 111,  29,  76, 101,  18, 115, 132,  50,  60,  71, 122,  33,  89, 139,   4,  44,  54, 126,  72,   2,  48,  65, 118,  14,  30,  24,  53,  80,  89,  99, 111, 136,   4,  18,  33, 126, 102,  65,  88,  21,  42,  54,  72,  80, 119, 130, 139,   8,  97,  34,  92, 113, 124,   0,  28, 104,  12,  61,  71,  87,   4,  42,  96, 111, 126,  76, 102, 116,  32,  38,  19,  26,  60,  84, 108,  91,  98, 130,   0,  14,  54,  29,  44, 138,  22,  73, 102, 117,   8,  17,  39,  59,  66,  80, 109, 122,  89, 128,  34,  53,  98, 114, 133,  26,  47,  42,   1,  69,  93, 107, 139,   6,  30,  63, 117,  12,  18,  38,  51,  57,  81,  99, 122, 128, 135,  90, 104,  43,  84,   2,  70,   9,  53,  36,  97, 131, 139,  27, 114,  58, 119,   3,  14,  23,  84,  91, 109, 128,  78,  29,  37,  43,  63,  72,  95, 133,  10,  16,  68,  82, 104, 125,  24,  58,  88, 116,  40,  52,  93, 137,   5,  47,  65,  71, 100,  35,  76,  85, 123,   1,  30,  57, 109, 135,   9,  45,  88, 114]))\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(374, 8410)"
+       "Counter({1000000: 742305960572, 2: 9445168})"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,20 +660,21 @@
    "source": [
     "data11 = np.array(data(11, list))\n",
     "\n",
-    "def day11(data, expansion=2):\n",
-    "    cols = IntervalTree([Interval(x, x+1) for x in np.where(np.all(data == '.', axis=1))[0]])\n",
-    "    rows = IntervalTree([Interval(x, x+1) for x in np.where(np.all(data == '.', axis=0))[0]])\n",
+    "def day11(data, expansions):\n",
+    "    cols, rows = [IntervalTree([Interval(x, x+1) for x in np.where(np.all(data == '.', axis=i))[0]]) for i in range(2)]\n",
     "\n",
     "    galaxies = np.where(data == '#')\n",
     "\n",
-    "    distance = 0\n",
-    "    for a, b in itertools.combinations(zip(galaxies[0], galaxies[1]), 2):\n",
-    "        ys, xs = [Interval(*sorted([a[i], b[i]])) for i in range(2)]\n",
+    "    results = Counter()\n",
+    "    for a, b in itertools.combinations(range(len(galaxies[0])), 2):\n",
+    "        xs, ys = Interval(galaxies[0][a], galaxies[0][b]), Interval(*sorted([galaxies[1][a], galaxies[1][b]]))\n",
     "        empties = len(cols[ys[0]:ys[1]]) + len(rows[xs[0]:xs[1]])\n",
-    "        distance += abs(ys[0]-ys[1]) + abs(xs[0]-xs[1]) + empties * (expansion-1)\n",
-    "    return distance\n",
+    "        distance = ys[1]-ys[0] + xs[1]-xs[0]\n",
+    "        for expansion in expansions:\n",
+    "            results[expansion] += distance + empties * (expansion-1)\n",
+    "    return results\n",
     "\n",
-    "day11(data11), day11(data11, 1000000)"
+    "day11(data11, [2, 1000000])"
    ]
   }
  ],
